--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "litvintech",
+  "license": "MIT",
+  "repository": "https://github.com/cybercongress/cyb-snap",
   "dependencies": {
     "bech32": "^1.1.3",
     "eth-json-rpc-errors": "^1.1.0",
